# ccq

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
assets/: cli-demo.tape  tui-demo.tape
nix/: devshell.nix  formatter.nix  package.nix
src/: discovery.rs  doc.rs  index.rs  indexer.rs  main.rs  meta.rs  pager.rs  parser.rs  search.rs  sessions.rs  stats.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
