[package]
name = "ccq"
version = "0.1.0"
edition = "2024"
description = "Search your Claude Code conversation history"
license = "MIT"

[dependencies]
tantivy = "0.22"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"
textwrap = "0.16"
base64 = "0.22.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
codegen-units = 256
incremental = true
